# proyecto

./: README.md  pyproject.toml  ruff.toml
proyecto/: .gitignore  README.md  db.sqlite3
proyecto/clientes/: admin.py  forms.py  models.py  urls.py  views.py
proyecto/clientes/templates/clientes/: cliente_form.html  cliente_list.html  index.html  pais_create.html  pais_form.html  pais_list.html
proyecto/core/templates/core/: base.html  index.html
proyecto/core/templates/core/componentes/: footer.html  navbar.html
proyecto/productos/: forms.py  models.py  urls.py  views.py
proyecto/productos/migrations/: 0001_initial.py
proyecto/productos/templates/productos/: index.html  productocategoria_create.html  productocategoria_detail.html  productocategoria_form.html  productocategoria_list.html
proyecto/proyecto/: settings.py  urls.py
proyecto/proyecto/clientes/: models.py  urls.py  views.py
proyecto/proyecto/clientes/migrations/: 0001_initial.py  0002_alter_cliente_nacimiento_and_more.py  0003_alter_pais_nombre.py
proyecto/proyecto/clientes/templates/clientes/: cliente_list.html  index.html  pais_detail.html
proyecto/proyecto/core/templates/core/: base.html  index.html
proyecto/proyecto/core/templates/core/componentes/: footer.html  navbar.html
proyecto/proyecto/productos/: admin.py  models.py
proyecto/proyecto/proyecto/: urls.py
