# Instalar `uv`desde https://docs.astral.sh/uv/
# uv self update  (para actualizar)
# uv sync --no-install-project (o `uv init` si el archivo pyproject.toml no existe)

[project]
name = "proyecto"
version = "2024.8.1"
description = "Proyecto de introducción al framework Django, del curso de Python de Coderhouse"
requires-python = ">=3.12"

# uv add django
# uv add pillow
dependencies = [
    "django>=5.1",
    "pillow>=10.4.0",
]

[tool.uv]
# uv add ruff --dev
# uv add djlint --dev
dev-dependencies = [
    "ruff>=0.6.2",
    "djlint>=1.34.1",
    "ipython>=8.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ********** CONFIGURACION DE RUFF **********
# https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 100
exclude = [".venv", "migrations", "manage.py"]

[tool.ruff.format]
# Cadenas con comillas simples simples
quote-style = "single"

[tool.ruff.lint]
# Conjunto de reglas: N (nombres) R (refactorizaciones) I (importaciones) A (builtins) F (varios)
extend-select = ["F", "I", "N", "R", "A"]
ignore = ["F401"]   # F401 importaciones no usadas 

[tool.djlint]
profile="django"
use_gitignore=true
ignore="H021,T002,H030,H031"
blank_line_before_tag="block"
blank_line_after_tag="load,extends,endblock"
max_line_length=100
line_break_after_multiline_tag=true
close_void_tags=true
format_attribute_template_tags=true