[project]
name = "proyecto"
version = "2024.8.28"
description = "Proyecto de introducción al framework Django, del curso de Python de Coderhouse"
requires-python = ">=3.12"

# uv add pillow
dependencies = [
    "django>=5.1",
    "pillow>=10.4.0",
]

[tool.uv]
# uv add ruff --dev
# uv add djlint --dev
dev-dependencies = [
    "ruff>=0.6.2",
    "djlint>=1.34.1",
    "ipython>=8.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ********** CONFIGURACION DE RUFF **********
# https://docs.astral.sh/ruff/

[tool.ruff]
line-length = 100

extend-select = ["F", "I", "N", "A"] # Conjunto de reglas: N (nombres) R (refactorizaciones) I (importaciones) A (builtins) F (varios)
exclude = [".venv", "migrations", "manage.py"]

[tool.ruff.format]
quote-style = "single"  # Cadenas con comillas simples simples

[tool.ruff.lint]
ignore = ["F401"] # F401 importaciones no usadas 

[tool.djlint]
profile="django"
use_gitignore=true
close_void_tags=true
max_line_length=100
ignore="H021,T002,H030,H031"
blank_line_before_tag="block"
blank_line_after_tag="load,extends,endblock"
format_attribute_template_tags=true
line_break_after_multiline_tag=false